Move streaming from Activity to Status, auto-fill Twitch channel 1098046431
